[CSDiagnostics] Support static "Type." fix-it

Check whether we found a static property, and if
so, suggest inserting "Type." instead of "self.".

Resolves SR-11788.